--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
 	"author": "dnsev-h",
 	"description": "Export your favorites on E*Hentai",
 	"dependencies": {
-		"html-minifier": "~0.6.9",
+		"axios": "^0.27.2",
 		"clean-css": "~3.4.4",
 		"complexion": "~0.1.3",
-		"complexion-js": "~0.1.5"
+		"complexion-js": "~0.1.5",
+		"html-minifier": "~0.6.9"
 	},
-	"devDependencies": {},
 	"scripts": {},
 	"repository": {
 		"type": "git",
