--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"clean-css": "~3.4.4",
 		"complexion": "~0.1.3",
 		"complexion-js": "~0.1.5",
-		"html-minifier": "~0.6.9"
+		"html-minifier": "~0.6.9",
+		"pug": "^3.0.2"
 	},
 	"scripts": {},
 	"repository": {
