--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"complexion": "~0.1.3",
 		"complexion-js": "~0.1.5",
 		"html-minifier": "~0.6.9",
+		"nodemon": "^2.0.16",
 		"pug": "^3.0.2"
 	},
 	"scripts": {},
