--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"description": "Export your favorites on E*Hentai",
 	"dependencies": {
 		"axios": "^0.27.2",
+		"chart.js": "^3.8.0",
 		"clean-css": "~3.4.4",
 		"complexion": "~0.1.3",
 		"complexion-js": "~0.1.5",
